[package]
name = "cargo-script-runner"
version = "0.1.0"
authors = ["dunmengjun <a2091013@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
strfmt = "0.1.6"

[package.metadata.scripts]
dev-run = "echo test{0}"