[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
bitflags = "1.2.1"

[package.metadata.scripts]
img-build-release = """cargo build --release && cd ../easy-fs-fuse \\
&& cargo run --release -- \\
-s ../user/src/bin/ \\
-t ../user/target/riscv64gc-unknown-none-elf/release/"""

img-build-dev = """cargo build && cd ../easy-fs-fuse \\
&& cargo run -- \\
-s ../user/src/bin/ \\
-t ../user/target/riscv64gc-unknown-none-elf/debug/"""